# aindreyway_mcp-server-neurolora-p

./: .clinerules  .flake8  .gitignore  .neurolora  .neuroloraignore  CONTRIBUTING.md  DONE.md  LICENSE  PROJECT_SUMMARY.md  README.md  TASK.md  TODO.md  pre-commit.py  pyproject.toml  test_server.py
.github/workflows/: tests.yml
docs/: BRANCH_MANAGEMENT.md
mcpneurolora/: __init__.py  __main__.py  config.py  exceptions.py  file_naming.py  log_utils.py  mcp_server.py  server.py  server_handlers.py  server_types.py  server_utils.py  storage.py  terminal.py  terminal_server.py  types.py  utils.py
mcpneurolora/prompts/: __init__.py  commands.prompt.md  commands.py  improve.prompt.md  request.prompt.md
mcpneurolora/providers/: __init__.py  anthropic_provider.py  base_provider.py  gemini_provider.py  openai_provider.py
mcpneurolora/templates/: done.template.md  ignore.template  todo.template.md
mcpneurolora/tools/: __init__.py  base_analyzer.py  collector.py  definitions.py  executor.py  improver.py  reporter.py  requester.py
mcpneurolora/types/: __init__.py  appdirs.pyi  async_io.pyi  pathlib.pyi  vscode.py  vscode.pyi
mcpneurolora/utils/: __init__.py  async_io.py  file_lock.py  input_validation.py  progress.py  token_counter.py  validation.py
memlog/: changelog.md  stability_checklist.md
src/mcp_server_neurolorap/: __init__.py  __main__.py  collector.py  project_structure_reporter.py  server.py  storage.py  terminal.py  types.py
src/mcp_server_neurolorap/prompts/: analyze.prompt copy.md  analyze.prompt.md  createfunctional.prompt.md  dotodo.prompt.md
src/mcp_server_neurolorap/templates/: done.template.md  ignore.template  todo.template.md
tests/: README.md  conftest.py  run_all_tests.py
tests/integration/: conftest.py  test_base_provider.py  test_gemini_provider.py  test_openai_provider.py  test_server.py  test_server_code_collector.py  test_server_dev_mode.py  test_server_error_handling.py  test_server_main.py  test_server_project_structure.py  test_server_tools.py
tests/unit/: conftest.py  test_base_analyzer.py  test_collector.py  test_exceptions.py  test_executor.py  test_improver.py  test_input_validation.py  test_main.py  test_project_report.py  test_project_structure_reporter.py  test_providers_init.py  test_server.py  test_server_code_collector.py  test_server_dev_mode.py  test_server_error_handling.py  test_server_main.py  test_server_project_structure.py  test_server_tools.py  test_storage.py  test_terminal.py  test_token_counter.py  test_types.py  test_types_core.py  test_types_detailed.py  test_types_module.py  test_types_vscode.py  test_utils.py
